--- a/index.html
+++ b/index.html
@@ -34,64 +34,102 @@
 
         <!-- 符號展示區 -->
         <div class="symbol-container">
+            <!-- 熱門符號 -->
             <div class="symbols" id="popular">
-                <span class="symbol" data-symbol="❤️">❤️</span>
+                <span class="symbol" data-symbol="❤">❤</span>
                 <span class="symbol" data-symbol="✨">✨</span>
-                <span class="symbol" data-symbol="🌟">🌟</span>
                 <span class="symbol" data-symbol="★">★</span>
                 <span class="symbol" data-symbol="☆">☆</span>
-                <span class="symbol" data-symbol="➡️">➡️</span>
-                <span class="symbol" data-symbol="😂">😂</span>
-                <span class="symbol" data-symbol="👍">👍</span>
-                <span class="symbol" data-symbol="✔️">✔️</span>
-                <span class="symbol" data-symbol="✈️">✈️</span>
-                <span class="symbol" data-symbol="©️">©️</span>
-                <span class="symbol" data-symbol="®️">®️</span>
-                <span class="symbol" data-symbol="™️">™️</span>
-                <span class="symbol" data-symbol="🎉">🎉</span>
-                <span class="symbol" data-symbol="💡">💡</span>
-                <span class="symbol" data-symbol="🔥">🔥</span>
-                <span class="symbol" data-symbol="💯">💯</span>
-                <span class="symbol" data-symbol="✅">✅</span>
+                <span class="symbol" data-symbol="✔">✔</span>
+                <span class="symbol" data-symbol="✘">✘</span>
+                <span class="symbol" data-symbol="©">©</span>
+                <span class="symbol" data-symbol="®">®</span>
+                <span class="symbol" data-symbol="™">™</span>
+                <span class="symbol" data-symbol="♡">♡</span>
+                <span class="symbol" data-symbol="♪">♪</span>
+                <span class="symbol" data-symbol="♫">♫</span>
+                <span class="symbol" data-symbol="☺">☺</span>
+                <span class="symbol" data-symbol="☻">☻</span>
+                <span class="symbol" data-symbol="☼">☼</span>
+                <span class="symbol" data-symbol="☾">☾</span>
+                <span class="symbol" data-symbol="☽">☽</span>
+                <span class="symbol" data-symbol="♠">♠</span>
+                <span class="symbol" data-symbol="♣">♣</span>
+                <span class="symbol" data-symbol="♥">♥</span>
+                <span class="symbol" data-symbol="♦">♦</span>
+                <span class="symbol" data-symbol="✈">✈</span>
+                <span class="symbol" data-symbol="☎">☎</span>
+                <span class="symbol" data-symbol="♨">♨</span>
+                <span class="symbol" data-symbol="⚽">⚽</span>
+                <span class="symbol" data-symbol="⚾">⚾</span>
+                <span class="symbol" data-symbol="☯">☯</span>
+                <span class="symbol" data-symbol="⚓">⚓</span>
+                <span class="symbol" data-symbol="⚡">⚡</span>
+                <span class="symbol" data-symbol="❄">❄</span>
             </div>
+            <!-- 單位符號 -->
             <div class="symbols hidden" id="units">
                 <span class="symbol" data-symbol="°">°</span>
                 <span class="symbol" data-symbol="℃">℃</span>
                 <span class="symbol" data-symbol="℉">℉</span>
-                <span class="symbol" data-symbol="％">％</span>
+                <span class="symbol" data-symbol="%">%</span>
                 <span class="symbol" data-symbol="‰">‰</span>
                 <span class="symbol" data-symbol="㎏">㎏</span>
+                <span class="symbol" data-symbol="g">g</span>
                 <span class="symbol" data-symbol="㎎">㎎</span>
                 <span class="symbol" data-symbol="㎜">㎜</span>
                 <span class="symbol" data-symbol="㎝">㎝</span>
+                <span class="symbol" data-symbol="m">m</span>
                 <span class="symbol" data-symbol="㎡">㎡</span>
                 <span class="symbol" data-symbol="㎞">㎞</span>
                 <span class="symbol" data-symbol="㏄">㏄</span>
                 <span class="symbol" data-symbol="ℓ">ℓ</span>
                 <span class="symbol" data-symbol="㎖">㎖</span>
                 <span class="symbol" data-symbol="㎗">㎗</span>
-                <span class="symbol" data-symbol="㏕">㏕</span>
+                <span class="symbol" data-symbol="μ">μ</span>
+                <span class="symbol" data-symbol="Ω">Ω</span>
+                <span class="symbol" data-symbol="Å">Å</span>
+                <span class="symbol" data-symbol="℥">℥</span>
+                <span class="symbol" data-symbol="Ω">Ω</span>
+                <span class="symbol" data-symbol="㏅">㏅</span>
+                <span class="symbol" data-symbol="㏆">㏆</span>
+                <span class="symbol" data-symbol="㏈">㏈</span>
+                <span class="symbol" data-symbol="㏉">㏉</span>
             </div>
+            <!-- 箭頭符號 -->
             <div class="symbols hidden" id="arrows">
-                <span class="symbol" data-symbol="➡️">➡️</span>
-                <span class="symbol" data-symbol="⬅️">⬅️</span>
-                <span class="symbol" data-symbol="⬆️">⬆️</span>
-                <span class="symbol" data-symbol="⬇️">⬇️</span>
-                <span class="symbol" data-symbol="↗️">↗️</span>
-                <span class="symbol" data-symbol="↙️">↙️</span>
-                <span class="symbol" data-symbol="↘️">↘️</span>
-                <span class="symbol" data-symbol="↖️">↖️</span>
-                <span class="symbol" data-symbol="➤">➤</span>
-                <span class="symbol" data-symbol="⇧">⇧</span>
-                <span class="symbol" data-symbol="⇩">⇩</span>
-                <span class="symbol" data-symbol="↔️">↔️</span>
-                <span class="symbol" data-symbol="↕️">↕️</span>
-                <span class="symbol" data-symbol="➜">➜</span>
                 <span class="symbol" data-symbol="←">←</span>
-                <span class="symbol" data-symbol="→">→</span>
                 <span class="symbol" data-symbol="↑">↑</span>
+                <span class="symbol" data-symbol="→">→</span>
                 <span class="symbol" data-symbol="↓">↓</span>
+                <span class="symbol" data-symbol="↔">↔</span>
+                <span class="symbol" data-symbol="↕">↕</span>
+                <span class="symbol" data-symbol="↖">↖</span>
+                <span class="symbol" data-symbol="↗">↗</span>
+                <span class="symbol" data-symbol="↘">↘</span>
+                <span class="symbol" data-symbol="↙">↙</span>
+                <span class="symbol" data-symbol="↚">↚</span>
+                <span class="symbol" data-symbol="↛">↛</span>
+                <span class="symbol" data-symbol="↜">↜</span>
+                <span class="symbol" data-symbol="↝">↝</span>
+                <span class="symbol" data-symbol="↞">↞</span>
+                <span class="symbol" data-symbol="↟">↟</span>
+                <span class="symbol" data-symbol="↠">↠</span>
+                <span class="symbol" data-symbol="↡">↡</span>
+                <span class="symbol" data-symbol="↢">↢</span>
+                <span class="symbol" data-symbol="↣">↣</span>
+                <span class="symbol" data-symbol="↤">↤</span>
+                <span class="symbol" data-symbol="↥">↥</span>
+                <span class="symbol" data-symbol="↦">↦</span>
+                <span class="symbol" data-symbol="↧">↧</span>
+                <span class="symbol" data-symbol="↨">↨</span>
+                <span class="symbol" data-symbol="➔">➔</span>
+                <span class="symbol" data-symbol="➜">➜</span>
+                <span class="symbol" data-symbol="➝">➝</span>
+                <span class="symbol" data-symbol="➞">➞</span>
+                <span class="symbol" data-symbol="➟">➟</span>
             </div>
+            <!-- 排版符號 -->
             <div class="symbols hidden" id="typography">
                 <span class="symbol" data-symbol="…">…</span>
                 <span class="symbol" data-symbol="—">—</span>
@@ -109,7 +147,19 @@
                 <span class="symbol" data-symbol="⁜">⁜</span>
                 <span class="symbol" data-symbol="⁂">⁂</span>
                 <span class="symbol" data-symbol="⸺">⸺</span>
+                <span class="symbol" data-symbol="‽">‽</span>
+                <span class="symbol" data-symbol="⁎">⁎</span>
+                <span class="symbol" data-symbol="⁑">⁑</span>
+                <span class="symbol" data-symbol="⁓">⁓</span>
+                <span class="symbol" data-symbol="〈">〈</span>
+                <span class="symbol" data-symbol="〉">〉</span>
+                <span class="symbol" data-symbol="⟐">⟐</span>
+                <span class="symbol" data-symbol="⟑">⟑</span>
+                <span class="symbol" data-symbol="⟒">⟒</span>
+                <span class="symbol" data-symbol="⟓">⟓</span>
+                <span class="symbol" data-symbol="⟔">⟔</span>
             </div>
+            <!-- 星星符號 -->
             <div class="symbols hidden" id="stars">
                 <span class="symbol" data-symbol="★">★</span>
                 <span class="symbol" data-symbol="☆">☆</span>
@@ -124,45 +174,79 @@
                 <span class="symbol" data-symbol="✮">✮</span>
                 <span class="symbol" data-symbol="✯">✯</span>
                 <span class="symbol" data-symbol="✰">✰</span>
-                <span class="symbol" data-symbol="🌟">🌟</span>
-                <span class="symbol" data-symbol="⭐">⭐</span>
-                <span class="symbol" data-symbol="🌠">🌠</span>
+                <span class="symbol" data-symbol="✴">✴</span>
+                <span class="symbol" data-symbol="✵">✵</span>
+                <span class="symbol" data-symbol="✶">✶</span>
+                <span class="symbol" data-symbol="✷">✷</span>
+                <span class="symbol" data-symbol="✸">✸</span>
+                <span class="symbol" data-symbol="✹">✹</span>
+                <span class="symbol" data-symbol="✺">✺</span>
+                <span class="symbol" data-symbol="✽">✽</span>
+                <span class="symbol" data-symbol="✾">✾</span>
+                <span class="symbol" data-symbol="✿">✿</span>
+                <span class="symbol" data-symbol="❀">❀</span>
+                <span class="symbol" data-symbol="❁">❁</span>
+                <span class="symbol" data-symbol="❂">❂</span>
             </div>
+            <!-- 貨幣符號 -->
             <div class="symbols hidden" id="currency">
                 <span class="symbol" data-symbol="$">$</span>
-                <span class="symbol" data-symbol="€">€</span>
-                <span class="symbol" data-symbol="£">£</span>
-                <span class="symbol" data-symbol="¥">¥</span>
-                <span class="symbol" data-symbol="₩">₩</span>
-                <span class="symbol" data-symbol="₹">₹</span>
-                <span class="symbol" data-symbol="₽">₽</span>
-                <span class="symbol" data-symbol="฿">฿</span>
                 <span class="symbol" data-symbol="¢">¢</span>
+                <span class="symbol" data-symbol="£">£</span>
+                <span class="symbol" data-symbol="¤">¤</span>
+                <span class="symbol" data-symbol="¥">¥</span>
+                <span class="symbol" data-symbol="ƒ">ƒ</span>
+                <span class="symbol" data-symbol="€">€</span>
+                <span class="symbol" data-symbol="₠">₠</span>
+                <span class="symbol" data-symbol="₡">₡</span>
+                <span class="symbol" data-symbol="₢">₢</span>
+                <span class="symbol" data-symbol="₣">₣</span>
+                <span class="symbol" data-symbol="₤">₤</span>
+                <span class="symbol" data-symbol="₥">₥</span>
+                <span class="symbol" data-symbol="₦">₦</span>
+                <span class="symbol" data-symbol="₧">₧</span>
+                <span class="symbol" data-symbol="₨">₨</span>
+                <span class="symbol" data-symbol="₩">₩</span>
                 <span class="symbol" data-symbol="₪">₪</span>
                 <span class="symbol" data-symbol="₫">₫</span>
-                <span class="symbol" data-symbol="₣">₣</span>
-                <span class="symbol" data-symbol="₧">₧</span>
-                <span class="symbol" data-symbol="₤">₤</span>
-                <span class="symbol" data-symbol="₨">₨</span>
+                <span class="symbol" data-symbol="₭">₭</span>
+                <span class="symbol" data-symbol="₮">₮</span>
+                <span class="symbol" data-symbol="₯">₯</span>
+                <span class="symbol" data-symbol="₰">₰</span>
+                <span class="symbol" data-symbol="₱">₱</span>
+                <span class="symbol" data-symbol="₹">₹</span>
+                <span class="symbol" data-symbol="₳">₳</span>
             </div>
+            <!-- 數學符號 -->
             <div class="symbols hidden" id="math">
-                <span class="symbol" data-symbol="∞">∞</span>
-                <span class="symbol" data-symbol="∑">∑</span>
-                <span class="symbol" data-symbol="∫">∫</span>
-                <span class="symbol" data-symbol="π">π</span>
-                <span class="symbol" data-symbol="√">√</span>
-                <span class="symbol" data-symbol="±">±</span>
                 <span class="symbol" data-symbol="×">×</span>
                 <span class="symbol" data-symbol="÷">÷</span>
+                <span class="symbol" data-symbol="±">±</span>
+                <span class="symbol" data-symbol="∓">∓</span>
                 <span class="symbol" data-symbol="≈">≈</span>
+                <span class="symbol" data-symbol="≅">≅</span>
                 <span class="symbol" data-symbol="≠">≠</span>
+                <span class="symbol" data-symbol="≡">≡</span>
                 <span class="symbol" data-symbol="≤">≤</span>
                 <span class="symbol" data-symbol="≥">≥</span>
-                <span class="symbol" data-symbol="≡">≡</span>
+                <span class="symbol" data-symbol="≪">≪</span>
+                <span class="symbol" data-symbol="≫">≫</span>
+                <span class="symbol" data-symbol="≺">≺</span>
+                <span class="symbol" data-symbol="≻">≻</span>
                 <span class="symbol" data-symbol="∝">∝</span>
-                <span class="symbol" data-symbol="∆">∆</span>
+                <span class="symbol" data-symbol="√">√</span>
+                <span class="symbol" data-symbol="∞">∞</span>
+                <span class="symbol" data-symbol="∟">∟</span>
+                <span class="symbol" data-symbol="∠">∠</span>
+                <span class="symbol" data-symbol="∥">∥</span>
                 <span class="symbol" data-symbol="∧">∧</span>
                 <span class="symbol" data-symbol="∨">∨</span>
+                <span class="symbol" data-symbol="∩">∩</span>
+                <span class="symbol" data-symbol="∪">∪</span>
+                <span class="symbol" data-symbol="∫">∫</span>
+                <span class="symbol" data-symbol="∑">∑</span>
+                <span class="symbol" data-symbol="π">π</span>
+                <span class="symbol" data-symbol="∆">∆</span>
             </div>
         </div>
     </div>
