--- a/index.html
+++ b/index.html
@@ -905,7 +905,290 @@
                 <span class="symbol" data-symbol="∫">∫</span>
                 <span class="symbol" data-symbol="∑">∑</span>
                 <span class="symbol" data-symbol="π">π</span>
+                <span class="symbol" data-symbol="∆">∆</span>           
+            <!-- 星星符號 -->
+            <div class="symbols hidden" id="stars">
+                <span class="symbol" data-symbol="★">★</span>
+                <span class="symbol" data-symbol="☆">☆</span>
+                <span class="symbol" data-symbol="✡">✡</span>
+                <span class="symbol" data-symbol="✦">✦</span>
+                <span class="symbol" data-symbol="✧">✧</span>
+                <span class="symbol" data-symbol="✩">✩</span>
+                <span class="symbol" data-symbol="✪">✪</span>
+                <span class="symbol" data-symbol="✫">✫</span>
+                <span class="symbol" data-symbol="✬">✬</span>
+                <span class="symbol" data-symbol="✭">✭</span>
+                <span class="symbol" data-symbol="✮">✮</span>
+                <span class="symbol" data-symbol="✯">✯</span>
+                <span class="symbol" data-symbol="✰">✰</span>
+                <span class="symbol" data-symbol="✴">✴</span>
+                <span class="symbol" data-symbol="✵">✵</span>
+                <span class="symbol" data-symbol="✶">✶</span>
+                <span class="symbol" data-symbol="✷">✷</span>
+                <span class="symbol" data-symbol="✸">✸</span>
+                <span class="symbol" data-symbol="✹">✹</span>
+                <span class="symbol" data-symbol="✺">✺</span>
+                <span class="symbol" data-symbol="✽">✽</span>
+                <span class="symbol" data-symbol="✾">✾</span>
+                <span class="symbol" data-symbol="✿">✿</span>
+                <span class="symbol" data-symbol="❀">❀</span>
+                <span class="symbol" data-symbol="❁">❁</span>
+                <span class="symbol" data-symbol="❂">❂</span>
+                <span class="symbol" data-symbol="❉">❉</span>
+                <span class="symbol" data-symbol="✱">✱</span>
+                <span class="symbol" data-symbol="✲">✲</span>
+                <span class="symbol" data-symbol="✳">✳</span>
+                <span class="symbol" data-symbol="*">* ⁕</span>
+                <span class="symbol" data-symbol="⁕">⁕</span>
+                <span class="symbol" data-symbol="⋆">⋆</span>
+                <span class="symbol" data-symbol="✢">✢</span>
+                <span class="symbol" data-symbol="✣">✣</span>
+                <span class="symbol" data-symbol="✤">✤</span>
+                <span class="symbol" data-symbol="✥">✥</span>
+                <span class="symbol" data-symbol="❆">❆</span>
+                <span class="symbol" data-symbol="❇">❇</span>
+                <span class="symbol" data-symbol="❈">❈</span>
+                <span class="symbol" data-symbol="❃">❃</span>
+                <span class="symbol" data-symbol="❋">❋</span>
+            </div>
+
+            <!-- 貨幣符號 -->
+            <div class="symbols hidden" id="currency">
+                <span class="symbol" data-symbol="$">$</span>
+                <span class="symbol" data-symbol="¢">¢</span>
+                <span class="symbol" data-symbol="£">£</span>
+                <span class="symbol" data-symbol="¤">¤</span>
+                <span class="symbol" data-symbol="¥">¥</span>
+                <span class="symbol" data-symbol="ƒ">ƒ</span>
+                <span class="symbol" data-symbol="€">€</span>
+                <span class="symbol" data-symbol="₠">₠</span>
+                <span class="symbol" data-symbol="₡">₡</span>
+                <span class="symbol" data-symbol="₢">₢</span>
+                <span class="symbol" data-symbol="₣">₣</span>
+                <span class="symbol" data-symbol="₤">₤</span>
+                <span class="symbol" data-symbol="₥">₥</span>
+                <span class="symbol" data-symbol="₦">₦</span>
+                <span class="symbol" data-symbol="₧">₧</span>
+                <span class="symbol" data-symbol="₨">₨</span>
+                <span class="symbol" data-symbol="₩">₩</span>
+                <span class="symbol" data-symbol="₪">₪</span>
+                <span class="symbol" data-symbol="₫">₫</span>
+                <span class="symbol" data-symbol="₭">₭</span>
+                <span class="symbol" data-symbol="₮">₮</span>
+                <span class="symbol" data-symbol="₯">₯</span>
+                <span class="symbol" data-symbol="₰">₰</span>
+                <span class="symbol" data-symbol="₱">₱</span>
+                <span class="symbol" data-symbol="₲">₲</span>
+                <span class="symbol" data-symbol="₳">₳</span>
+                <span class="symbol" data-symbol="₴">₴</span>
+                <span class="symbol" data-symbol="₵">₵</span>
+                <span class="symbol" data-symbol="﷼">﷼</span>
+                <span class="symbol" data-symbol="￥">￥</span>
+                <span class="symbol" data-symbol="￡">￡</span>
+                <span class="symbol" data-symbol="￠">￠</span>
+                <span class="symbol" data-symbol="฿">฿</span>
+                <span class="symbol" data-symbol="৲">৲</span>
+                <span class="symbol" data-symbol="৳">৳</span>
+                <span class="symbol" data-symbol="௹">௹</span>
+                <span class="symbol" data-symbol="៛">៛</span>
+                <span class="symbol" data-symbol="〒">〒</span>
+            </div>
+
+            <!-- 數學符號 -->
+            <div class="symbols hidden" id="math">
+                <span class="symbol" data-symbol="×">×</span>
+                <span class="symbol" data-symbol="÷">÷</span>
+                <span class="symbol" data-symbol="±">±</span>
+                <span class="symbol" data-symbol="∓">∓</span>
+                <span class="symbol" data-symbol="≈">≈</span>
+                <span class="symbol" data-symbol="≅">≅</span>
+                <span class="symbol" data-symbol="≠">≠</span>
+                <span class="symbol" data-symbol="≡">≡</span>
+                <span class="symbol" data-symbol="≤">≤</span>
+                <span class="symbol" data-symbol="≥">≥</span>
+                <span class="symbol" data-symbol="≪">≪</span>
+                <span class="symbol" data-symbol="≫">≫</span>
+                <span class="symbol" data-symbol="≺">≺</span>
+                <span class="symbol" data-symbol="≻">≻</span>
+                <span class="symbol" data-symbol="∝">∝</span>
+                <span class="symbol" data-symbol="√">√</span>
+                <span class="symbol" data-symbol="∞">∞</span>
+                <span class="symbol" data-symbol="∟">∟</span>
+                <span class="symbol" data-symbol="∠">∠</span>
+                <span class="symbol" data-symbol="∥">∥</span>
+                <span class="symbol" data-symbol="∧">∧</span>
+                <span class="symbol" data-symbol="∨">∨</span>
+                <span class="symbol" data-symbol="∩">∩</span>
+                <span class="symbol" data-symbol="∪">∪</span>
+                <span class="symbol" data-symbol="∫">∫</span>
+                <span class="symbol" data-symbol="∑">∑</span>
+                <span class="symbol" data-symbol="π">π</span>
                 <span class="symbol" data-symbol="∆">∆</span>
+                <span class="symbol" data-symbol="≒">≒</span>
+                <span class="symbol" data-symbol="≌">≌</span>
+                <span class="symbol" data-symbol="∵">∵</span>
+                <span class="symbol" data-symbol="∴">∴</span>
+                <span class="symbol" data-symbol="／">／</span>
+                <span class="symbol" data-symbol="⧾">⧾</span>
+                <span class="symbol" data-symbol="⧿">⧿</span>
+                <span class="symbol" data-symbol="﹣">﹣</span>
+                <span class="symbol" data-symbol="≦">≦</span>
+                <span class="symbol" data-symbol="≧">≧</span>
+                <span class="symbol" data-symbol="﹤">﹤</span>
+                <span class="symbol" data-symbol="﹥">﹥</span>
+                <span class="symbol" data-symbol="╳">╳</span>
+                <span class="symbol" data-symbol="⊾">⊾</span>
+                <span class="symbol" data-symbol="⁽">⁽</span>
+                <span class="symbol" data-symbol="⁾">⁾</span>
+                <span class="symbol" data-symbol="∷">∷</span>
+                <span class="symbol" data-symbol="ˇ">ˇ</span>
+                <span class="symbol" data-symbol="∮">∮</span>
+                <span class="symbol" data-symbol="⊿">⊿</span>
+                <span class="symbol" data-symbol="＋">＋</span>
+                <span class="symbol" data-symbol="﹢">﹢</span>
+                <span class="symbol" data-symbol="⊥">⊥</span>
+                <span class="symbol" data-symbol="¼">¼</span>
+                <span class="symbol" data-symbol="½">½</span>
+                <span class="symbol" data-symbol="¾">¾</span>
+                <span class="symbol" data-symbol="⅟">⅟</span>
+                <span class="symbol" data-symbol="⅓">⅓</span>
+                <span class="symbol" data-symbol="⅕">⅕</span>
+                <span class="symbol" data-symbol="⅙">⅙</span>
+                <span class="symbol" data-symbol="⅛">⅛</span>
+                <span class="symbol" data-symbol="⅔">⅔</span>
+                <span class="symbol" data-symbol="⅖">⅖</span>
+                <span class="symbol" data-symbol="⅚">⅚</span>
+                <span class="symbol" data-symbol="⅜">⅜</span>
+                <span class="symbol" data-symbol="⅗">⅗</span>
+                <span class="symbol" data-symbol="⅝">⅝</span>
+                <span class="symbol" data-symbol="⅞">⅞</span>
+                <span class="symbol" data-symbol="⅘">⅘</span>
+                <span class="symbol" data-symbol="⅐">⅐</span>
+                <span class="symbol" data-symbol="⅑">⅑</span>
+                <span class="symbol" data-symbol="⅒">⅒</span>
+                <span class="symbol" data-symbol="↉">↉</span>
+                <span class="symbol" data-symbol="∬">∬</span>
+                <span class="symbol" data-symbol="∭">∭</span>
+                <span class="symbol" data-symbol="∯">∯</span>
+                <span class="symbol" data-symbol="∰">∰</span>
+                <span class="symbol" data-symbol="∱">∱</span>
+                <span class="symbol" data-symbol="∲">∲</span>
+                <span class="symbol" data-symbol="∳">∳</span>
+                <span class="symbol" data-symbol="≂">≂</span>
+                <span class="symbol" data-symbol="≃">≃</span>
+                <span class="symbol" data-symbol="≄">≄</span>
+                <span class="symbol" data-symbol="≆">≆</span>
+                <span class="symbol" data-symbol="≇">≇</span>
+                <span class="symbol" data-symbol="≉">≉</span>
+                <span class="symbol" data-symbol="≊">≊</span>
+                <span class="symbol" data-symbol="≋">≋</span>
+                <span class="symbol" data-symbol="≍">≍</span>
+                <span class="symbol" data-symbol="≎">≎</span>
+                <span class="symbol" data-symbol="≏">≏</span>
+                <span class="symbol" data-symbol="≐">≐</span>
+                <span class="symbol" data-symbol="≑">≑</span>
+                <span class="symbol" data-symbol="≓">≓</span>
+                <span class="symbol" data-symbol="≔">≔</span>
+                <span class="symbol" data-symbol="≕">≕</span>
+                <span class="symbol" data-symbol="≖">≖</span>
+                <span class="symbol" data-symbol="≗">≗</span>
+                <span class="symbol" data-symbol="≘">≘</span>
+                <span class="symbol" data-symbol="≙">≙</span>
+                <span class="symbol" data-symbol="≚">≚</span>
+                <span class="symbol" data-symbol="≛">≛</span>
+                <span class="symbol" data-symbol="≜">≜</span>
+                <span class="symbol" data-symbol="≝">≝</span>
+                <span class="symbol" data-symbol="≞">≞</span>
+                <span class="symbol" data-symbol="≟">≟</span>
+                <span class="symbol" data-symbol="≣">≣</span>
+                <span class="symbol" data-symbol="≨">≨</span>
+                <span class="symbol" data-symbol="≩">≩</span>
+                <span class="symbol" data-symbol="⊰">⊰</span>
+                <span class="symbol" data-symbol="⊱">⊱</span>
+                <span class="symbol" data-symbol="⋛">⋛</span>
+                <span class="symbol" data-symbol="⋚">⋚</span>
+                <span class="symbol" data-symbol="⁰">⁰</span>
+                <span class="symbol" data-symbol="¹">¹</span>
+                <span class="symbol" data-symbol="²">²</span>
+                <span class="symbol" data-symbol="³">³</span>
+                <span class="symbol" data-symbol="⁴">⁴</span>
+                <span class="symbol" data-symbol="⁵">⁵</span>
+                <span class="symbol" data-symbol="⁶">⁶</span>
+                <span class="symbol" data-symbol="⁷">⁷</span>
+                <span class="symbol" data-symbol="⁸">⁸</span>
+                <span class="symbol" data-symbol="⁹">⁹</span>
+                <span class="symbol" data-symbol="₀">₀</span>
+                <span class="symbol" data-symbol="₁">₁</span>
+                <span class="symbol" data-symbol="₂">₂</span>
+                <span class="symbol" data-symbol="₃">₃</span>
+                <span class="symbol" data-symbol="₄">₄</span>
+                <span class="symbol" data-symbol="₅">₅</span>
+                <span class="symbol" data-symbol="₆">₆</span>
+                <span class="symbol" data-symbol="₇">₇</span>
+                <span class="symbol" data-symbol="₈">₈</span>
+                <span class="symbol" data-symbol="₉">₉</span>
+                <span class="symbol" data-symbol="⁺">⁺</span>
+                <span class="symbol" data-symbol="⁻">⁻</span>
+                <span class="symbol" data-symbol="⁼">⁼</span>
+                <span class="symbol" data-symbol="₊">₊</span>
+                <span class="symbol" data-symbol="₋">₋</span>
+                <span class="symbol" data-symbol="₌">₌</span>
+                <span class="symbol" data-symbol="ⁱ">ⁱ</span>
+                <span class="symbol" data-symbol="ⁿ">ⁿ</span>
+                <span class="symbol" data-symbol="ₐ">ₐ</span>
+                <span class="symbol" data-symbol="ₑ">ₑ</span>
+                <span class="symbol" data-symbol="ₒ">ₒ</span>
+                <span class="symbol" data-symbol="ₓ">ₓ</span>
+                <span class="symbol" data-symbol="ₔ">ₔ</span>
+                <span class="symbol" data-symbol="‱">‱</span>
+                <span class="symbol" data-symbol="∶">∶</span>
+                <span class="symbol" data-symbol="∸">∸</span>
+                <span class="symbol" data-symbol="∹">∹</span>
+                <span class="symbol" data-symbol="∺">∺</span>
+                <span class="symbol" data-symbol="∻">∻</span>
+                <span class="symbol" data-symbol="∼">∼</span>
+                <span class="symbol" data-symbol="∽">∽</span>
+                <span class="symbol" data-symbol="∾">∾</span>
+                <span class="symbol" data-symbol="∿">∿</span>
+                <span class="symbol" data-symbol="≀">≀</span>
+                <span class="symbol" data-symbol="‖">‖</span>
+                <span class="symbol" data-symbol="|a|">|a|</span>
+                <span class="symbol" data-symbol="∈">∈</span>
+                <span class="symbol" data-symbol="∋">∋</span>
+                <span class="symbol" data-symbol="⋙">⋙</span>
+                <span class="symbol" data-symbol="⋘">⋘</span>
+                <span class="symbol" data-symbol="⋟">⋟</span>
+                <span class="symbol" data-symbol="⋞">⋞</span>
+                <span class="symbol" data-symbol="⋣">⋣</span>
+                <span class="symbol" data-symbol="⋢">⋢</span>
+                <span class="symbol" data-symbol="⋥">⋥</span>
+                <span class="symbol" data-symbol="⋤">⋤</span>
+                <span class="symbol" data-symbol="⋩">⋩</span>
+                <span class="symbol" data-symbol="⋨">⋨</span>
+                <span class="symbol" data-symbol="⋧">⋧</span>
+                <span class="symbol" data-symbol="⋦">⋦</span>
+                <span class="symbol" data-symbol="⋫">⋫</span>
+                <span class="symbol" data-symbol="⋪">⋪</span>
+                <span class="symbol" data-symbol="⋭">⋭</span>
+                <span class="symbol" data-symbol="⋬">⋬</span>
+                <span class="symbol" data-symbol="⋰">⋰</span>
+                <span class="symbol" data-symbol="⋱">⋱</span>
+                <span class="symbol" data-symbol="⋮">⋮</span>
+                <span class="symbol" data-symbol="⋯">⋯</span>
+                <span class="symbol" data-symbol="∡">∡</span>
+                <span class="symbol" data-symbol="∢">∢</span>
+                <span class="symbol" data-symbol="∀">∀</span>
+                <span class="symbol" data-symbol="∁">∁</span>
+                <span class="symbol" data-symbol="∂">∂</span>
+                <span class="symbol" data-symbol="∃">∃</span>
+                <span class="symbol" data-symbol="∄">∄</span>
+                <span class="symbol" data-symbol="∅">∅</span>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
             </div>
         </div>
     </div>
