--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>特殊符號選取工具</h1>
-        <p>點擊符號即可複製到剪貼簿，輕鬆使用！</p>
+        <p>點擊符號即可複製到剪貼簿！</p>
 
         <!-- 最近使用區 -->
         <div class="recent-symbols">
