--- a/index.html
+++ b/index.html
@@ -905,7 +905,8 @@
                 <span class="symbol" data-symbol="∫">∫</span>
                 <span class="symbol" data-symbol="∑">∑</span>
                 <span class="symbol" data-symbol="π">π</span>
-                <span class="symbol" data-symbol="∆">∆</span>           
+                <span class="symbol" data-symbol="∆">∆</span> 
+            </div>    
             <!-- 星星符號 -->
             <div class="symbols hidden" id="stars">
                 <span class="symbol" data-symbol="★">★</span>
@@ -951,7 +952,6 @@
                 <span class="symbol" data-symbol="❃">❃</span>
                 <span class="symbol" data-symbol="❋">❋</span>
             </div>
-
             <!-- 貨幣符號 -->
             <div class="symbols hidden" id="currency">
                 <span class="symbol" data-symbol="$">$</span>
@@ -993,7 +993,6 @@
                 <span class="symbol" data-symbol="៛">៛</span>
                 <span class="symbol" data-symbol="〒">〒</span>
             </div>
-
             <!-- 數學符號 -->
             <div class="symbols hidden" id="math">
                 <span class="symbol" data-symbol="×">×</span>
